# MOFMaster

./: .env.example  .gitignore  IMPLEMENTATION.md  LICENSE  README.md  README_KNOWLEDGE.md  SETUP.md  example_usage.py  pyproject.toml  requirements.txt
app/: __init__.py  graph.py  schema.py  server.py  state.py
app/agents/: __init__.py  analyzer.py  reporter.py  runner.py  supervisor.py
app/tools/: __init__.py  atomistics.py  io.py  retrieval.py
app/utils/: __init__.py  langsmith_config.py  llm.py
data/: HKUST-1.cif  HKUST-1_optimized.cif
dev_log/: agent.md
scripts/: analyzer_eval.py  create_sample_cif.py  inspect_eval_run.py  render_eval_report.py
tests/: __init__.py
tests/integration/: test_workflow.py
tests/unit/: test_state.py  test_tools.py
